loading db done. sqljs class properly started. prevent accidental navigate away. working on topEl wrap when screen width is less than 500px

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ background-color: #71AEEC;
 display: flex;
 justify-content: center;
 align-items: center;
+flex-direction: column;
 font-family: "DejaVu Sans", Arial, sans-serif;
 border-radius: 4px;
 z-index: 100;
@@ -40,6 +41,7 @@ width: 100%;
 margin: 0px 0px 20px 0px;
 justify-content: space-between;
 align-items: flex-start;
+flex-wrap: wrap;
 z-index: 50;
 }
 
@@ -51,6 +53,7 @@ color: white;
 font-weight: bold;
 background-color: #71AEEC;
 }
+
 
 #menu{
 margin: 0px;
